stable version with opa and e2e authentication
